# Assignment

./: .gitignore  CMakeLists.txt  Log.txt
DxLib/x64/Debug/: DxLib.exe.recipe  vc143.idb
DxLib/x64/Debug/DxLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DxLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DxLib/x64/Release/: DxLib.exe.recipe  DxLib.iobj  DxLib.ipdb
DxLib/x64/Release/DxLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DxLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/: Camera.hpp  Main.cpp  Player.cpp  Player.hpp  Terrain.cpp  Terrain.hpp  Vector.hpp  Water.cpp  Water.hpp
x64/Release/: Log.txt
